2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-11  Michael Koch  <konqueror@gmx.de>

        * javax/imageio/ImageIO.java (ReaderFormatFilter.filter):
        Fixed wrong casting.

2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-10  Sven de Marothy  <sven@physto.se>

        * java/text/SimpleDateFormat.java:
        (formatWithAttribute): Pad year before truncating digits.

2005-04-19  Dalibor Topic  <robilad@kaffe.org>

        Resynced with GNU Classpath.

	2005-04-15  Sven de Marothy  <sven@physto.se>

        * gnu/java/nio/charset/EncodingHelper.java: Added method

	2005-04-13  Sven de Marothy  <sven@physto.se>

        * java/nio/charset/Charset.java: Cached encoders shouldn't be static.

	2005-04-12  Sven de Marothy  <sven@physto.se>

        * gnu/java/nio/charset/Provider.java: Add UnicodeLittle.
        * gnu/java/nio/charset/UnicodeLittle.java: New file.
        * gnu/java/nio/charset/UTF_16.java: UnicodeBig is an alias.
        * gnu/java/nio/charset/UTF_16BE.java,
        * gnu/java/nio/charset/UTF_16LE.java: No byte-order mark.
        * gnu/java/nio/charset/UTF_16Encoder.java (encodeLoop): Fixed bug.

	2005-04-08  Sven de Marothy  <sven@physto.se>

        * gnu/java/nio/charset/UTF_8.java
        (Decoder): Previous fix was incorrect. Sorry.
        * java/nio/charset/Charset.java: Reset cached de/encoders.
        * java/nio/charset/CharsetDecoder.java,
        java/nio/charset/CharsetEncoder.java:
        Resize encoding/decoding result buffers.

	2005-04-08  Sven de Marothy  <sven@physto.se>

        * gnu/java/nio/charset/Provider.java: Add new charsets.
        * gnu/java/nio/charset/UTF_16.java: Default to using BOM.
        * gnu/java/nio/charset/UTF_16Decoder.java: Minor fixes.
        * gnu/java/nio/charset/UTF_16Encoder.java,
        Use NIO's built-in byte-ordering instead.
        * gnu/java/nio/charset/UTF_8.java,